Comments,Indentations and CSS tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,10 @@ body{
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
   Helvetica, Arial, "Lucida Grande", sans-serif;
 }
-
 a{
   color: #3C9BF8;
   text-decoration: none;
 }
-
 p{
   margin-top: 0;
   margin-right: 0;
@@ -15,90 +13,19 @@ p{
   border: 0;
   color: gray;
 }
-
 input{
   width: 80%;
   margin: 5px 0 5px 0;
   color:gray;
 }
-
-#signUp p{
-  margin-left: 20%;
-  margin-right: 20%;
-}
-
-#signUp input{
-  width: 80%;
-}
-
-#logo{
-  height:50%;
-  width:50%;
-}
-
-#prevLogin p{
-  color: black;
-}
-
-#big{
-  font-weight: bold;
-}
-
-#storeLogos{
-  margin: 0;
-}
-
-#storeLogos{
-  display: flex;
-  flex-wrap: wrap;
-  flex-flow: row;
-  margin: 0;
-  border: 0px;
-}
-
-#storeLogos div{
-  width: 50%;
-}
-
-#storeLogos img{
-  margin:0;
-}
-
-#prevLogin{
-  margin-top: 20px;
-}
-
-#remind{
-  border: none;
-  margin: 20px 0;
-}
-
-#remind p{
-  color:black;
-  font-size: 12px;
-}
-
-#copyright p{
-  margin-left: 100px;
-  color: lightgray;
-  font-size: 10px;
-}
-
 form input{
-  margin-top: 10px;
+  border: 1px solid #cacdcb;
+  color:#cacdcb;
+  margin-top: 3px;
+  margin-bottom: 3px;
   height:20px;
   width: 200px;
 }
-
-
-.lineThing{
-  display: flex;
-}
-
-hr{
-  width: 500px;
-}
-
 button{
   height: 30px;
   width: 80%;
@@ -107,63 +34,134 @@ button{
   margin-bottom: 10px;
 }
 footer{
-  margin-left: 10%;
+  font-weight: bold;
+  font-size: 10px;
+  margin-left: 15%;
   margin-right: 10%;
-  margin-top: 0;
+  margin-top: 50px;
   display: flex;
   flex-flow: row;
 }
-
 footer p{
+  margin-top: 30px;
   margin-left: 20px;
-  margin-right: 20px;
   color: #001f8d;
+  font-size: 10px;
+}
+#hrLeft{
+  width: 300px;
+  margin-left: 25px;
+}
+#hrRight{
+  width: 300px;
+  margin-right:25px;
+}
+#signUp{
+  border: 1px solid #f3f3f3;
+}
+#signUp p{
+  margin-left: 20%;
+  margin-right: 20%;
   font-size: 12px;
 }
-
+#signUp input{
+  width: 80%;
+  border: 1px solid #f3f3f3;
+}
+#signUpBtn{
+  margin-top:5px;
+}
+#fb{
+  margin-top: 5px;
+  margin-right: 5px;
+}
+#logo{
+  height:50%;
+  width:50%;
+}
+#prevLogin p{
+  color: black;
+}
+#test{
+  color: white;
+}
+#storeLogos{
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: row;
+  margin: 0;
+  border: 0px;
+}
+#prevLogin{
+  border: 1px solid #f3f3f3;
+  margin-top: 20px;
+  padding-top: 10px;
+  font-size: 12px;
+}
+#remind{
+  border: none;
+  margin: 20px 0;
+}
+#remind p{
+  color:black;
+  font-size: 12px;
+}
+#copyright {
+  margin-left: 100px;
+  color: lightgray;
+  font-size: 10px;
+}
+#ios{
+  height: 30%;
+  width: 30%;
+  margin-right: 5px;
+}
+#android{
+  height: 30%;
+  width: 30%;
+}
+.big{
+  font-weight: bold;
+}
 .container{
-  margin: 100px;
+  margin: 50px;
   margin-left: 275px;
   margin-bottom: 25px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
 }
-
 .phoneContainer img{
-  height: 580px;
+  margin-top: 30px;
+  height: 480px;
 }
-
 .container div{
   text-align: center;
   justify-content: center;
   align-items: center;
   margin: 0;
 }
-
 .signContainer{
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 300px;
 }
-
 .signContainer > div{
   border: 1px solid lightgray;
 }
-
 .fa {
   height: 10px;
   width: 10px;
   text-align: center;
   text-decoration: none;
 }
-
 .fa-facebook{
   background: white;
   color: #1492f7;
 }
-
 .lineThing p{
   padding-top: 10px;
-  font-size: 12px;
+}
+.lineThing{
+  display: flex;
 }
